Created some constructors in Model Layer and some controller function and a bit of Mock DB

--- a/SolvrSolution/SolvrLibrary/SolvrLibrary.csproj
+++ b/SolvrSolution/SolvrLibrary/SolvrLibrary.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="Category.cs" />
     <Compile Include="Comment.cs" />
+    <Compile Include="ISolvrDB.cs" />
+    <Compile Include="MockDB.cs" />
     <Compile Include="PhysicalPost.cs" />
     <Compile Include="Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
