--- a/SolvrSolution/DbHandler/DbHandler.csproj
+++ b/SolvrSolution/DbHandler/DbHandler.csproj
@@ -65,5 +65,9 @@
       <Name>SolvrLibrary</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="DBScripts\CreateScript.txt" />
+    <Content Include="DBScripts\DropScript.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
