--- a/SolvrSolution/SolvrWebClient/SolvrWebClient.csproj
+++ b/SolvrSolution/SolvrWebClient/SolvrWebClient.csproj
@@ -272,6 +272,7 @@
     <Content Include="Views\CreatePost\CreatePhysical.cshtml" />
     <Content Include="Views\CreatePost\Index.cshtml" />
     <Content Include="Views\Post\Index.cshtml" />
+    <Content Include="Views\Post\PhysicalIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
