--- a/SolvrSolution/SolvrWebClient/SolvrWebClient.csproj
+++ b/SolvrSolution/SolvrWebClient/SolvrWebClient.csproj
@@ -273,6 +273,8 @@
     <Content Include="Views\CreatePost\Index.cshtml" />
     <Content Include="Views\Post\Index.cshtml" />
     <Content Include="Views\Post\PhysicalIndex.cshtml" />
+    <Content Include="Views\CreatePost\EditPhysicalPost.cshtml" />
+    <Content Include="Views\CreatePost\EditPost.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
