--- a/SolvrSolution/SolvrWebClient/packages.config
+++ b/SolvrSolution/SolvrWebClient/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
+  <package id="BrockAllen.MembershipReboot" version="9.0.0" targetFramework="net461" />
+  <package id="BrockAllen.MembershipReboot.Ef" version="9.0.0" targetFramework="net461" />
+  <package id="BrockAllen.MembershipReboot.WebHost" version="9.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
@@ -36,5 +39,9 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="SimpleInjector" version="4.0.12" targetFramework="net461" />
+  <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="4.0.0" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.Web" version="4.0.12" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.Web.Mvc" version="4.0.12" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
