Added isResolved variable to Report and made the aproparited changes to make it work. Also made the DesktopController and a method to getallreports. and so on. plus some dekstopgui work

--- a/SolvrSolution/SolvrDesktopClient/SolvrDesktopClient.csproj
+++ b/SolvrSolution/SolvrDesktopClient/SolvrDesktopClient.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DesktopController.cs" />
     <Compile Include="Forside.cs">
       <SubType>Form</SubType>
     </Compile>
