--- a/SolvrSolution/SolvrDesktopClient/SolvrDesktopClient.csproj
+++ b/SolvrSolution/SolvrDesktopClient/SolvrDesktopClient.csproj
@@ -54,6 +54,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportCommentForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportCommentForm.Designer.cs">
+      <DependentUpon>ReportCommentForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ReportPostForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportPostForm.Designer.cs">
+      <DependentUpon>ReportPostForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Forside.resx">
       <DependentUpon>Forside.cs</DependentUpon>
     </EmbeddedResource>
@@ -67,6 +79,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ReportCommentForm.resx">
+      <DependentUpon>ReportCommentForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReportPostForm.resx">
+      <DependentUpon>ReportPostForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
