--- a/SolvrSolution/SolvrDesktopClient/SolvrDesktopClient.csproj
+++ b/SolvrSolution/SolvrDesktopClient/SolvrDesktopClient.csproj
@@ -104,12 +104,18 @@
       <Name>SolvrLibrary</Name>
     </ProjectReference>
     <ProjectReference Include="..\SolvrServices\SolvrServices.csproj">
-      <Project>{6CCBD207-72D6-41B1-8BE6-7F3093464FF5}</Project>
+      <Project>{6ccbd207-72d6-41b1-8be6-7f3093464ff5}</Project>
       <Name>SolvrServices</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="Images\Logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Images\profile_placeholder.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
