--- a/SolvrSolution/SolvrWebClient.Tests/SolvrWebClient.Tests.csproj
+++ b/SolvrSolution/SolvrWebClient.Tests/SolvrWebClient.Tests.csproj
@@ -90,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\CreatePostPageControllerTest.cs" />
+    <Compile Include="Controllers\PostControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
@@ -100,6 +101,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DataAccesLayer\DataAccesLayer.csproj">
+      <Project>{2e3b225a-aad6-4d73-a4f6-c76db17e9638}</Project>
+      <Name>DataAccesLayer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SolvrLibrary\SolvrLibrary.csproj">
       <Project>{7a512b96-b646-4e04-b9f5-6c9658209c1b}</Project>
       <Name>SolvrLibrary</Name>
@@ -108,6 +113,9 @@
       <Project>{36427826-98CF-49DA-8D00-91BE3C82ECAE}</Project>
       <Name>SolvrWebClient</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
