--- a/SolvrSolution/SolvrServices/App.config
+++ b/SolvrSolution/SolvrServices/App.config
@@ -24,6 +24,7 @@
         <endpoint address="Solvr"
                   binding="basicHttpBinding"
                   contract="SolvrServices.ISolvrServices"/>
+        <!-- tcp endpointet bliver ikke brugt -->
         <endpoint address="net.tcp://localhost:2113/Solvr"
                   binding="netTcpBinding"
                   contract="SolvrServices.ISolvrServices"/>
