--- a/SolvrSolution/SolvrServices/App.config
+++ b/SolvrSolution/SolvrServices/App.config
@@ -10,7 +10,7 @@
   <!--<connectionStrings>
     <add name="SolvrDB" connectionString=/>
   </connectionStrings>-->
-  
+
   <!-- When deploying the service library project, the content of the config file must be added to the host's 
   app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
@@ -24,15 +24,11 @@
         <endpoint address="Solvr"
                   binding="basicHttpBinding"
                   contract="SolvrServices.ISolvrServices"/>
-        <!-- tcp endpointet bliver ikke brugt -->
-        <endpoint address="net.tcp://localhost:2113/Solvr"
-                  binding="netTcpBinding"
-                  contract="SolvrServices.ISolvrServices"/>
       </service>
     </services>
     <behaviors>
       <serviceBehaviors>
-        
+
         <behavior>
           <serviceDebug includeExceptionDetailInFaults="true"/>
           <!-- To avoid disclosing metadata information, 
@@ -44,19 +40,14 @@
         </behavior>
       </serviceBehaviors>
     </behaviors>
-    <bindings>
-      <basicHttpBinding>
-        <binding maxReceivedMessageSize="214323213" maxBufferSize="214323213">
-          <readerQuotas maxArrayLength="213123123" maxStringContentLength="213124123"/>
+    <!--<bindings>
+      <basichttpbinding>
+        <binding maxreceivedmessagesize="214323213" maxbuffersize="214323213">
+          <readerquotas maxarraylength="213123123" maxstringcontentlength="213124123"/>
         </binding>
-      </basicHttpBinding>
-      <netTcpBinding>
-        <binding maxReceivedMessageSize="214323213" maxBufferSize="214323213">
-          <readerQuotas maxArrayLength="213123123" maxStringContentLength="213124123"/>
-        </binding>
-        </netTcpBinding>
-    </bindings>
-    
+      </basichttpbinding>
+    </bindings>-->
+
   </system.serviceModel>
 
 </configuration>
