corrected a few errors

--- a/SolvrSolution/SolvrWebClient/Web.config
+++ b/SolvrSolution/SolvrWebClient/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SolvrWebClient-20171109111102.mdf;Initial Catalog=aspnet-SolvrWebClient-20171109111102;Integrated Security=True" 
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SolvrWebClient-20171109111102.mdf;Initial Catalog=aspnet-SolvrWebClient-20171109111102;Integrated Security=True"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -94,4 +94,16 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_ISolvrServices" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:2112/Solvr" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_ISolvrServices" contract="RemoteSolvrReference.ISolvrServices"
+        name="BasicHttpBinding_ISolvrServices" />
+    </client>
+  </system.serviceModel>
 </configuration>
