Founde the error of inheritance. Last commit from me in this branch.

--- a/SolvrSolution/SolvrServices/App.config
+++ b/SolvrSolution/SolvrServices/App.config
@@ -7,12 +7,57 @@
   <system.web>
     <compilation debug="true" />
   </system.web>
-  <!--<connectionStrings>
-    <add name="SolvrDB" connectionString=/>
-  </connectionStrings>-->
-
   <!-- When deploying the service library project, the content of the config file must be added to the host's 
   app.config file. System.Configuration does not support config files for libraries. -->
+  <system.serviceModel>
+    <services>
+      <service name="SolvrServices.SolvrService">
+        <endpoint address="" binding="basicHttpBinding" contract="SolvrServices.ISolvrServices">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/WcfHelloService/Service1/" />
+          </baseAddresses>
+        </host>
+      </service>
+    </services>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior>
+          <!-- To avoid disclosing metadata information, 
+          set the values below to false before deployment -->
+          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
+          <!-- To receive exception details in faults for debugging purposes, 
+          set the value below to true.  Set to false before deployment 
+          to avoid disclosing exception information -->
+          <serviceDebug includeExceptionDetailInFaults="False" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+  </system.serviceModel>
+
+</configuration>
+
+
+<!--<?xml version="1.0" encoding="utf-8" ?>
+<configuration>
+
+  <appSettings>
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+  </appSettings>
+  <system.web>
+    <compilation debug="true" />
+  </system.web>
+  --><!--<connectionStrings>
+    <add name="SolvrDB" connectionString=/>
+  </connectionStrings>--><!--
+
+  --><!-- When deploying the service library project, the content of the config file must be added to the host's 
+  app.config file. System.Configuration does not support config files for libraries. --><!--
   <system.serviceModel>
     <services>
       <service name="SolvrServices.SolvrService">
@@ -31,23 +76,23 @@
 
         <behavior>
           <serviceDebug includeExceptionDetailInFaults="true"/>
-          <!-- To avoid disclosing metadata information, 
-          set the values below to false before deployment -->
+          --><!-- To avoid disclosing metadata information, 
+          set the values below to false before deployment --><!--
           <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
-          <!-- To receive exception details in faults for debugging purposes, 
+          --><!-- To receive exception details in faults for debugging purposes, 
           set the value below to true.  Set to false before deployment 
-          to avoid disclosing exception information -->
+          to avoid disclosing exception information --><!--
         </behavior>
       </serviceBehaviors>
     </behaviors>
-    <!--<bindings>
+    --><!--<bindings>
       <basichttpbinding>
         <binding maxreceivedmessagesize="214323213" maxbuffersize="214323213">
           <readerquotas maxarraylength="213123123" maxstringcontentlength="213124123"/>
         </binding>
       </basichttpbinding>
-    </bindings>-->
+    </bindings>--><!--
 
   </system.serviceModel>
 
-</configuration>
+</configuration>-->
