--- a/SolvrSolution/SolvrWebClient/Web.config
+++ b/SolvrSolution/SolvrWebClient/Web.config
@@ -101,9 +101,9 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:2112/Solvr" binding="basicHttpBinding"
-        bindingConfiguration="BasicHttpBinding_ISolvrServices" contract="RemoteSolvrReference.ISolvrServices"
-        name="BasicHttpBinding_ISolvrServices" />
+      <endpoint address="http://localhost:8733/Design_Time_Addresses/WcfHelloService/Service1/"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISolvrServices"
+        contract="RemoteSolvrReference.ISolvrServices" name="BasicHttpBinding_ISolvrServices" />
     </client>
   </system.serviceModel>
 </configuration>
