Worked on tests, desktopclient., added service reference and worked on solvrservice. and library

--- a/SolvrSolution/SolvrServices/App.config
+++ b/SolvrSolution/SolvrServices/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 
   <appSettings>
@@ -16,14 +16,12 @@
   <system.serviceModel>
     <services>
       <service name="SolvrServices.SolvrService">
+        <endpoint address="Solvr" binding="basicHttpBinding" contract="SolvrServices.ISolvrServices" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:2112"/>
+            <add baseAddress="http://localhost:2112" />
           </baseAddresses>
         </host>
-        <endpoint address="Solvr"
-                  binding="basicHttpBinding"
-                  contract="SolvrServices.ISolvrServices"/>
       </service>
     </services>
     <behaviors>
@@ -40,13 +38,16 @@
         </behavior>
       </serviceBehaviors>
     </behaviors>
-    <!--<bindings>
-      <basichttpbinding>
-        <binding maxreceivedmessagesize="214323213" maxbuffersize="214323213">
-          <readerquotas maxarraylength="213123123" maxstringcontentlength="213124123"/>
+    <bindings>
+      <basicHttpBinding>
+        <binding maxBufferPoolSize="20000000" maxBufferSize="20000000"
+          maxReceivedMessageSize="20000000">
+          <readerQuotas maxDepth="32" maxStringContentLength="20000000"
+            maxArrayLength="20000000" maxBytesPerRead="20000000" maxNameTableCharCount="20000000"
+            />
         </binding>
-      </basichttpbinding>
-    </bindings>-->
+      </basicHttpBinding>
+    </bindings>
 
   </system.serviceModel>
 
