--- a/SolvrSolution/Solvr.Test/app.config
+++ b/SolvrSolution/Solvr.Test/app.config
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_ISolvrServices" 
-              maxBufferPoolSize="20000000" maxBufferSize="20000000"
-  maxReceivedMessageSize="20000000">
-                <readerQuotas maxDepth="32" maxStringContentLength="20000000"
-                  maxArrayLength="20000000" maxBytesPerRead="20000000" maxNameTableCharCount="20000000"
-            />
-              </binding>
+                <binding name="BasicHttpBinding_ISolvrServices" maxBufferPoolSize="64000000"
+                    maxBufferSize="64000000" maxReceivedMessageSize="64000000" />
             </basicHttpBinding>
         </bindings>
         <client>
