--- a/SolvrSolution/wcfConsoleApplication/App.config
+++ b/SolvrSolution/wcfConsoleApplication/App.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -6,13 +6,7 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_ISolvrServices" 
-              maxBufferPoolSize="20000000" maxBufferSize="20000000"
-  maxReceivedMessageSize="20000000">
-                <readerQuotas maxDepth="32" maxStringContentLength="20000000"
-                  maxArrayLength="20000000" maxBytesPerRead="20000000" maxNameTableCharCount="20000000"
-            />
-              </binding>
+                <binding name="BasicHttpBinding_ISolvrServices" />
             </basicHttpBinding>
         </bindings>
         <client>
