Made WCF work with MVC

--- a/SolvrSolution/SolvrServices/App.config
+++ b/SolvrSolution/SolvrServices/App.config
@@ -40,11 +40,10 @@
     </behaviors>
     <bindings>
       <basicHttpBinding>
-        <binding maxBufferPoolSize="20000000" maxBufferSize="20000000"
-          maxReceivedMessageSize="20000000">
+        <binding maxBufferPoolSize="20000000" maxBufferSize="80000000"
+          maxReceivedMessageSize="80000000">
           <readerQuotas maxDepth="32" maxStringContentLength="20000000"
-            maxArrayLength="20000000" maxBytesPerRead="20000000" maxNameTableCharCount="20000000"
-            />
+            maxArrayLength="20000000" maxBytesPerRead="20000000" maxNameTableCharCount="20000000" />
         </binding>
       </basicHttpBinding>
     </bindings>
