--- a/SolvrSolution/SolvrWebClient/Web.config
+++ b/SolvrSolution/SolvrWebClient/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -97,13 +97,14 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_ISolvrServices" />
+        <binding name="BasicHttpBinding_ISolvrServices" maxBufferSize="1000000"
+          maxReceivedMessageSize="1000000" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:8733/Design_Time_Addresses/WcfHelloService/Service1/"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISolvrServices"
-        contract="RemoteSolvrReference.ISolvrServices" name="BasicHttpBinding_ISolvrServices" />
+      <endpoint address="http://localhost:2112/Solvr" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_ISolvrServices" contract="RemoteSolvrReference.ISolvrServices"
+        name="BasicHttpBinding_ISolvrServices" />
     </client>
   </system.serviceModel>
 </configuration>
