--- a/SolvrSolution/Solvr.Test/Solvr.Tests.csproj
+++ b/SolvrSolution/Solvr.Test/Solvr.Tests.csproj
@@ -97,6 +97,10 @@
       <Project>{7A512B96-B646-4E04-B9F5-6C9658209C1B}</Project>
       <Name>SolvrLibrary</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SolvrServices\SolvrServices.csproj">
+      <Project>{6CCBD207-72D6-41B1-8BE6-7F3093464FF5}</Project>
+      <Name>SolvrServices</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
