Inserted Christoffers Test stuff.

--- a/SolvrSolution/Solvr.Test/app.config
+++ b/SolvrSolution/Solvr.Test/app.config
@@ -1,16 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <system.serviceModel>
-        <bindings>
-            <basicHttpBinding>
-                <binding name="BasicHttpBinding_ISolvrServices" maxBufferPoolSize="64000000"
-                    maxBufferSize="64000000" maxReceivedMessageSize="64000000" />
-            </basicHttpBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://localhost:2112/Solvr" binding="basicHttpBinding"
-                bindingConfiguration="BasicHttpBinding_ISolvrServices" contract="RemoteSolvrReference.ISolvrServices"
-                name="BasicHttpBinding_ISolvrServices" />
-        </client>
+        <bindings />
+        <client />
     </system.serviceModel>
 </configuration>
